Initial structure and register user

--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
-MONGODB = mongodb+srv://ghellach:Alpha556677@achrafscluster-zxrkx.azure.mongodb.net/admin?authSource=admin&replicaSet=AchrafsCluster-shard-0&readPreference=primary&appname=MongoDB%20Compass%20Community&ssl=true
+MONGODB = mongodb+srv://ghellach:Alpha556677@achrafscluster-zxrkx.azure.mongodb.net/authdash?authSource=admin&replicaSet=AchrafsCluster-shard-0&readPreference=primary&appname=MongoDB%20Compass%20Community&ssl=true
+ERROR_SITE_URL = https://developers.authdash.com/docs/errors/
+
+APINAME = 'AuthDash API'
+APIVERSION = 0.9
+APIROOT = https://api.authdash.com
+APISTATUS = https://status.authdash.com
