--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.26.0",
     "mongodb": "^3.5.8",
     "mongoose": "^5.9.16",
     "morgan": "^1.10.0",
+    "randomstring": "^1.1.5",
     "uuid": "^8.1.0"
   },
   "scripts": {
