--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB = mongodb+srv://ghellach:Alpha556677@achrafscluster-zxrkx.azure.mongodb.net/authdash?authSource=admin&replicaSet=AchrafsCluster-shard-0&readPreference=primary&appname=MongoDB%20Compass%20Community&ssl=true
+MONGODB = mongodb+srv://ghellach:SKz8kYBWYHdCqtI3@clustercanada-a5dzn.azure.mongodb.net/authdash?authSource=admin&replicaSet=ClusterCanada-shard-0&readPreference=primary&appname=MongoDB%20Compass&ssl=true
 ERROR_SITE_URL = https://developers.authdash.com/docs/errors/
 JWTSECRET=+MbQeThWmZq4t7w!z%C*F-J@NcRfUjXn
 TOKEN=dSgVkYp3s6v8y/B?E(H+MbQeThWmZq4t
