--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MONGODB = mongodb+srv://ghellach:SKz8kYBWYHdCqtI3@clustercanada-a5dzn.azure.mongodb.net/authdash?authSource=admin&replicaSet=ClusterCanada-shard-0&readPreference=primary&appname=MongoDB%20Compass&ssl=true
-ERROR_SITE_URL = https://developers.authdash.com/docs/errors/
+DEV_URL = https://developers.authdash.com
 JWTSECRET=+MbQeThWmZq4t7w!z%C*F-J@NcRfUjXn
 TOKEN=dSgVkYp3s6v8y/B?E(H+MbQeThWmZq4t
 
