--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Achraf Ghellach",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "@sendgrid/mail": "^7.2.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -15,6 +16,7 @@
     "mongodb": "^3.5.8",
     "mongoose": "^5.9.16",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.4.8",
     "randomstring": "^1.1.5",
     "uuid": "^8.1.0"
   },
