--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-bearer-token": "^2.4.0",
+    "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.26.0",
     "mongodb": "^3.5.8",
