--- a/package.json
+++ b/package.json
@@ -6,9 +6,6 @@
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "@sendgrid/mail": "^7.2.0",
-    "@types/express": "^4.17.6",
-    "@types/mongoose": "^5.7.24",
-    "@types/node": "^14.0.13",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -28,8 +25,6 @@
     "start": "nodemon app.js"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.9.5"
+    "nodemon": "^2.0.4"
   }
 }
