--- a/reference/Documentation.v1.yaml
+++ b/reference/Documentation.v1.yaml
@@ -1,9 +1,14 @@
-openapi: '3.0.0'
+openapi: 3.0.0
 info:
-  title: Documentation
+  title: API v1.0 Documentation
   version: '1.0'
+  description: 'Hey, welcome to this chicky documentation (I hope so) ! '
+  contact:
+    name: Achraf Ghellach
+    url: 'https://authdash.com/team/AchrafGhellach'
+    email: achraf@maghnify.com
 servers:
-- url: http://localhost:3000
+  - url: 'https://api.authdash.com/v1/'
 paths: {}
 components:
   schemas: {}
