--- a/config/config.env
+++ b/config/config.env
@@ -1,4 +1,4 @@
-MONGODB = mongodb+srv://useruser:gY1eqLybP6Z3@clustercanada-a5dzn.azure.mongodb.net/authdash?authSource=admin&replicaSet=ClusterCanada-shard-0&w=majority&readPreference=primary&appname=MongoDB%20Compass&retryWrites=true&ssl=true
+MONGODB = mongodb+srv://useruser:Alpha556677coran131112999000666777@clustercanada-a5dzn.azure.mongodb.net/authdash?authSource=admin&replicaSet=ClusterCanada-shard-0&w=majority&readPreference=primary&appname=MongoDB%20Compass&retryWrites=true&ssl=true 
 DEV_URL = https://developers.authdash.com
 JWTSECRET= dSgVkYp3s6v8y/B?E(H+MbQeThWmZq4t
 CLIENTTOKEN=+MbQeThWmZq4t7w!z%C*F-J@NcRfUjXn
